[package]
name = "testplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://doc.rust-lang.org/cargo/reference/features.html
# https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies

# Theory:
# (not supported, only targets.cfg are allowed for dependencies rewrites)
['cfg(feature = "v044")'.dependencies]
libp2p = {version = "0.44.0" }

['cfg(feature = "v045")'.dependencies]
libp2p = {version = "0.45.0" }

['cfg(feature = "v041")'.dependencies]
libp2p = {version = "0.41.0" }

[features]
v045 = ["v044"]
v044 = []
v041 = []

# In theory we might be able to do something like:
# Trying:
# rustc --print=cfg
# Then:
# rustc +nightly -Z --print target-spec-json --target=unix
#
# then use
# [target.'cfg(my-custom-target)'.dependencies]
# libp2p = {version = "0.41.0" }

[dependencies]
env_logger = "0.9.0"
if-addrs = "0.7.0"
ipnetwork = { version = "0.18.0", default-features = false, features = ["serde"] }
soketto = "0.7.1"
async-std = { version = "1.10", features = [ "attributes", "tokio1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
testground = "0.2.0"
