[package]
name = "testplan"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.9.0"
if-addrs = "0.7.0"
ipnetwork = { version = "0.18.0", default-features = false, features = ["serde"] }
soketto = "0.7.1"
async-std = { version = "1.10", features = [ "attributes", "tokio1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
testground = "0.2.0"

libp2pv0440 = { package = "libp2p", default-features = false, version = "0.44.0", optional = true }
libp2pv0450 = { package = "libp2p", default-features = false, version = "0.45.0", optional = true }